# mimic1-full

./: .appveyor.yml  .gitmodules  .travis.yml  README.md  iphone.txt  meson.build  meson_options.txt  mimic_build.sh
include/: cst_builtin_plugins.h
mimic-full/: meson.build
mimic-full/src/: cst_builtin_plugins.c  mimic_main.c
mimic-full/subprojects/: mimic-cmu_us_slt.wrap  mimic-core.wrap  mimic-english.wrap  mimic-grapheme.wrap  mimic-indic.wrap  mimic-vid_gb_ap.wrap
src/: cst_builtin_plugins.c  mimic_main.c
subprojects/: saga.wrap
